--- a/mystyle.css
+++ b/mystyle.css
@@ -11,11 +11,14 @@ body {
   background: grey;
   height: 185px;
   border: 1px solid red;
+  font-size: 50px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 .item-01 {
   background: grey;
   height: 438px;
   border: 1px solid red;
+  font-family: 'Roboto', sans-serif;
 }
 .item-02 {
   background: grey;
