--- a/mystyle.scss
+++ b/mystyle.scss
@@ -7,19 +7,16 @@ body {
   height: 60px;
   border: 1px solid blue;
 }
-
 .main-logo {
   background: darkcyan;
   height: 185px;
   border: 1px solid red;
   font-size: 50px;
   font-family: 'Noto Sans KR', sans-serif;
+  img {
+    width: 300px;
+  }
 }
-
-.main-logo img {
-  width: 300px;
-}
-
 .item-01 {
   background: grey;
   height: 438px;
@@ -28,46 +25,41 @@ body {
   background-image: url(http://the-edit.co.kr/wp-content/uploads/2018/11/IMG_6310_main.jpg);
   background-position: center center;
   background-size: cover;
-}
 
-.item-01 .author .name {
-  color: rgba(255, 255, 255, 0.9);
-  font-size: 13px;
-  font-family: 'Noto Sans KR', sans-serif;
+  .author {
+    .name {
+      color: rgba(255, 255, 255, 0.9);
+      font-size: 13px;
+      font-family: 'Noto Sans KR', sans-serif;
+    }
+  }
+  .title-box {
+    color: #fff;
+    .category {
+      font-size: 13px;
+      border-bottom: 2px solid rgb(255, 103, 0);
+      font-family: 'Roboto', sans-serif;
+    }
+    .title {
+      font-size: 40px;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-weight: 700;
+    }
+  }
+  .overlay {
+    background: #262626;
+    height: 100%;
+    width: 100%;
+    opacity: 0.6;
+  }
 }
-
-.item-01 .title-box {
-  color: #fff;
-}
-
-.item-01 .title-box .category {
-  font-size: 13px;
-  border-bottom: 2px solid #ff6700;
-  font-family: 'Roboto', sans-serif;
-}
-
-.item-01 .title-box .title {
-  font-size: 40px;
-  font-family: 'Noto Sans KR', sans-serif;
-  font-weight: 700;
-}
-
-.item-01 .overlay {
-  background: #262626;
-  height: 100%;
-  width: 100%;
-  opacity: 0.6;
-}
-
 .item-02 {
   background: grey;
   height: 438px;
   border: 1px solid red;
 }
-
 .item-03 {
   background: grey;
   height: 438px;
   border: 1px solid red;
 }
-/*# sourceMappingURL=mystyle.css.map */
